@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.21
+Release: 0.24
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -476,6 +476,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Thu Jul 10 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.24
+- apply debugedit patch necessary to produce kernel -debuginfo files.
+
 * Wed Jul  9 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.21
 - resolve elf32/elf64 file conflicts to prefer elf64.
 
