@@ -21,6 +21,7 @@
 	- python: missed tuple refcount in IDTXload/IDTXglob.
 	- fix: IDTXglob should return REMOVETID sorted headers (#89857).
 	- resolve elf32/elf64 file conflicts to prefer elf64.
+	- apply debugedit patch necessary to produce kernel -debuginfo files.
 
 4.1 -> 4.2:
 	- set cachesize without a dbenv, the default is far too small.
